horizontal scroll and autoadjust fixed

--- a/src/styles.css
+++ b/src/styles.css
@@ -4,6 +4,5 @@ html, body{
     height:100%;
     padding:0px;
     margin:0px;
-    overflow: hidden;
     font-family: 'Poppins';
   }
